# audio-transcoder

./: .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/ReadWavWriteMp3/: CMakeLists.txt
demo/ReadWavWriteMp3/src/ReadWavWriteMp3/: Main.c
demo/ReadWavWriteWav/: CMakeLists.txt
demo/ReadWavWriteWav/src/ReadWavWriteWav/: Main.c
demo/WavToMp3BatchConverter/: CMakeLists.txt
demo/WavToMp3BatchConverter/src/WavToMp3BatchConverter/: Main.cpp  directory_iterator.hpp  get_directory_separator.hpp  get_number_of_processors.cpp  get_number_of_processors.hpp  get_path_separator.hpp  job.hpp  mutex.hpp  scoped_lock.hpp  thread.hpp
demo/WriteMp3/: CMakeLists.txt
demo/WriteMp3/src/WriteMp3/: Main.c
demo/WritePcm/: CMakeLists.txt
demo/WritePcm/src/WritePcm/: Main.c
demo/WriteWav/: CMakeLists.txt
demo/WriteWav/src/WriteWav/: Main.c
demo/data/: LessLoss-Mephisto-Listz-I-24_bit_96_kHz.md  africa-toto.md  jsbach-16kHz.md  jsbach-44.1kHz.md  jsbach-8kHz.md
dependencies/: CMakeLists.txt  README.md
